Fix: navbar spacing

--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -1,10 +1,3 @@
-#navbarBody {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 100%;
-}
-
 .navbar-container {
   /* Ensure the navbar has a fixed width and doesn't resize */
   min-width: 188px;
